--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -23,4 +23,4 @@ jobs:
         run: go build -v ./...
 
       - name: Run tests
-        run: go test ./... -short -p=1
+        run: go test ./... -race
