--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -2,7 +2,10 @@ name: Pull Request
 
 on:
   pull_request:
-    branches: [master]
+    branches: [main]
+    types:
+      - opened
+      - synchronize
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
