--- a/.github/workflows/pr-labeller.yaml
+++ b/.github/workflows/pr-labeller.yaml
@@ -13,6 +13,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      issues: write
     runs-on: ubuntu-24.04
     steps:
       - name: Label
