Check GitHub workflows work (#1)
* Rename workflow container-build to docker-build

* Rename workflow steps

* Run go tests in parallel

* Target main branch for PR workflow

* Add permissions to label PR

* Fix linter issues

--- a/.github/workflows/pr-labeller.yaml
+++ b/.github/workflows/pr-labeller.yaml
@@ -1,4 +1,5 @@
-name: "PR Labeller"
+name: PR Labeller
+
 on:
   pull_request:
     types:
@@ -12,6 +13,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      issues: write
     runs-on: ubuntu-24.04
     steps:
       - name: Label
