--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -1,4 +1,4 @@
-name: Go Build and Go Test
+name: Go Test
 
 on:
   workflow_call:
@@ -23,4 +23,4 @@ jobs:
         run: go build -v ./...
 
       - name: Run tests
-        run: go test ./... -short -p=1
+        run: go test ./... -race
