--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -1,8 +1,8 @@
-name: Pull Request Workflow
+name: Pull Request
 
 on:
   pull_request:
-    branches: [master]
+    branches: [main]
     types:
       - opened
       - synchronize
@@ -16,7 +16,7 @@ jobs:
     uses: ./.github/workflows/linter.yaml
   checks:
     uses: ./.github/workflows/checks.yaml
-  container-build:
+  docker-build:
     if: github.actor == 'hallyg'
     needs: [linter, checks]
-    uses: ./.github/workflows/container-build.yaml
+    uses: ./.github/workflows/docker-build.yaml
