--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -5,25 +5,7 @@ run:
   allow-parallel-runners: true
   timeout: 3m
 linters:
-  default: all
-  disable:
-    - depguard
-    - err113
-    - exhaustruct
-    - funlen
-    - gochecknoglobals
-    - godox
-    - gosec
-    - lll
-    - mnd
-    - paralleltest
-    - revive
-    - tagliatelle
-    - tparallel
-    - varnamelen
-    - wrapcheck
-    - cyclop
-    - gochecknoinits
-    - ireturn
-    - recvcheck
-    - musttag
+  default: standard
+formatters:
+  enable:
+    - gofmt
