--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -20,3 +20,6 @@ jobs:
     if: github.actor == 'hallyg'
     needs: [linter, checks]
     uses: ./.github/workflows/docker-build.yaml
+    env:
+      DOCKER_METADATA_TAGS: |
+        type=raw,value=1.2.3
