--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -23,4 +23,4 @@ jobs:
       - name: Run build
         run: go build -v -trimpath -mod=readonly ./...
       - name: Run tests
-        run: go test ./... -race
+        run: go test ./... -timeout 10s -race
