--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,7 @@ updates:
       interval: "weekly"
   - package-ecosystem: "gomod"
     directory: "/"
+    open-pull-requests-limit: 1
     schedule:
       interval: "monthly"
     labels:
