--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,8 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    labels:
+      - "CI/CD"
   - package-ecosystem: "gomod"
     directory: "/"
     open-pull-requests-limit: 1
