--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -6,6 +6,23 @@ run:
   timeout: 3m
 linters:
   default: standard
+  enable:
+    - gosec
+    - bodyclose
+    - noctx
+    - exhaustive
+    - loggercheck
+    - nilerr
+    - paralleltest
+    - sloglint
+    - testifylint
+    - thelper
+    - tparallel
 formatters:
   enable:
     - gofmt
+    - goimports
+issues:
+  uniq-by-line: false
+output:
+  show-stats: true
