--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,13 +7,13 @@ jobs:
   lint:
     runs-on: ubuntu-24.04
     steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
+      - uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd
       - uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00
         with:
-          go-version-file: 'go.mod'
+          go-version-file: "go.mod"
           cache: true
           cache-dependency-path: go.sum
-      - uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9
+      - uses: golangci/golangci-lint-action@0a35821d5c230e903fcfe077583637dea1b27b47
         with:
           version: v2.4.0
           args: --verbose --timeout=3m
@@ -23,10 +23,10 @@ jobs:
         os: [ubuntu-24.04]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
+      - uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd
       - uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00
         with:
-          go-version-file: 'go.mod'
+          go-version-file: "go.mod"
           cache: true
           cache-dependency-path: go.sum
       - name: Run tests
@@ -37,7 +37,7 @@ jobs:
           sanitized_branch_name=$(echo "${GITHUB_REF_NAME}" | tr '/' '-')
           echo "branch_name=${sanitized_branch_name}" >> $GITHUB_OUTPUT
       - name: Upload test coverage
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
+        uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4
         with:
           name: coverage-${{ steps.prepare.outputs.branch_name }}-${{ matrix.os }}-${{ github.run_number }}
           path: coverage.txt
